--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNk7DH+UyqQMvrHbQEQgTFT",
+      "authorship_tag": "ABX9TyOIq5oejl3cxd5Stgf88JhL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ezPhsqSlUL6L"
+        "id": "ezPhsqSlUL6L",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "07f5737a-3db3-4696-f31e-7f85db5b1533"
       },
       "source": [
         "from keras.datasets import imdb\n",
@@ -39,8 +43,18 @@
         "\n",
         "(train_data, train_labels),(test_data, test_labels) = imdb.load_data(num_words = 10000)\n"
       ],
-      "execution_count": 62,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb.npz\n",
+            "17465344/17464789 [==============================] - 0s 0us/step\n",
+            "17473536/17464789 [==============================] - 0s 0us/step\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -49,7 +63,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x9emV4AcVnu2",
-        "outputId": "f1617d97-9906-41f2-c8b3-5a767bc603f9"
+        "outputId": "88f3a956-a2c4-4126-f272-654d27b67d04"
       },
       "source": [
         "# decoding the comment into the words sequence in english\n",
@@ -62,12 +76,15 @@
         "  print(word_index.get(i-3,'?'))\n",
         "\n"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb_word_index.json\n",
+            "1646592/1641221 [==============================] - 0s 0us/step\n",
+            "1654784/1641221 [==============================] - 0s 0us/step\n",
             "?\n",
             "this\n",
             "film\n",
@@ -84,7 +101,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iXYFMRNFf2KV",
-        "outputId": "c67c8ec2-0327-4750-9f4a-820c5a93a09d"
+        "outputId": "a4b85b7a-adf0-4819-c315-40000cc72571"
       },
       "source": [
         "import numpy as np\n",
@@ -103,7 +120,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -113,7 +130,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 64
+          "execution_count": 3
         }
       ]
     },
@@ -127,7 +144,7 @@
         "y_test = np.asarray(test_labels).astype('float32')\n",
         "\n"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -145,7 +162,7 @@
         "model.add(layers.Dense(1, activation='sigmoid'))\n",
         "\n"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,7 +177,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -175,7 +192,7 @@
         "y_val = y_train[:10000]\n",
         "partial_y_train = y_train[10000:]"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -185,7 +202,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u73epd57_Tia",
-        "outputId": "65cb0fed-339d-4bb5-dda3-dea07fb2ae55"
+        "outputId": "8fe407ea-ab1e-44ef-8189-4f3c891f210d"
       },
       "source": [
         "history = model.fit(partial_x_train,\n",
@@ -194,52 +211,52 @@
         "                    batch_size=512,\n",
         "                    validation_data=(x_val,y_val))"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/20\n",
-            "30/30 [==============================] - 3s 80ms/step - loss: 0.5186 - accuracy: 0.7875 - val_loss: 0.3982 - val_accuracy: 0.8645\n",
+            "30/30 [==============================] - 2s 48ms/step - loss: 0.5165 - accuracy: 0.7691 - val_loss: 0.3845 - val_accuracy: 0.8585\n",
             "Epoch 2/20\n",
-            "30/30 [==============================] - 1s 43ms/step - loss: 0.3144 - accuracy: 0.9001 - val_loss: 0.3153 - val_accuracy: 0.8798\n",
+            "30/30 [==============================] - 1s 35ms/step - loss: 0.3037 - accuracy: 0.9015 - val_loss: 0.3015 - val_accuracy: 0.8884\n",
             "Epoch 3/20\n",
-            "30/30 [==============================] - 1s 44ms/step - loss: 0.2293 - accuracy: 0.9237 - val_loss: 0.2774 - val_accuracy: 0.8914\n",
+            "30/30 [==============================] - 1s 35ms/step - loss: 0.2220 - accuracy: 0.9287 - val_loss: 0.2790 - val_accuracy: 0.8894\n",
             "Epoch 4/20\n",
-            "30/30 [==============================] - 1s 44ms/step - loss: 0.1814 - accuracy: 0.9397 - val_loss: 0.2903 - val_accuracy: 0.8824\n",
+            "30/30 [==============================] - 1s 35ms/step - loss: 0.1745 - accuracy: 0.9440 - val_loss: 0.3209 - val_accuracy: 0.8709\n",
             "Epoch 5/20\n",
-            "30/30 [==============================] - 1s 44ms/step - loss: 0.1496 - accuracy: 0.9513 - val_loss: 0.2773 - val_accuracy: 0.8881\n",
+            "30/30 [==============================] - 1s 36ms/step - loss: 0.1436 - accuracy: 0.9537 - val_loss: 0.3280 - val_accuracy: 0.8705\n",
             "Epoch 6/20\n",
-            "30/30 [==============================] - 1s 43ms/step - loss: 0.1233 - accuracy: 0.9607 - val_loss: 0.2886 - val_accuracy: 0.8871\n",
+            "30/30 [==============================] - 1s 38ms/step - loss: 0.1170 - accuracy: 0.9646 - val_loss: 0.2939 - val_accuracy: 0.8834\n",
             "Epoch 7/20\n",
-            "30/30 [==============================] - 1s 43ms/step - loss: 0.1006 - accuracy: 0.9707 - val_loss: 0.3185 - val_accuracy: 0.8809\n",
+            "30/30 [==============================] - 1s 35ms/step - loss: 0.0995 - accuracy: 0.9697 - val_loss: 0.3102 - val_accuracy: 0.8825\n",
             "Epoch 8/20\n",
-            "30/30 [==============================] - 1s 44ms/step - loss: 0.0863 - accuracy: 0.9744 - val_loss: 0.3263 - val_accuracy: 0.8795\n",
+            "30/30 [==============================] - 1s 35ms/step - loss: 0.0815 - accuracy: 0.9761 - val_loss: 0.3337 - val_accuracy: 0.8810\n",
             "Epoch 9/20\n",
-            "30/30 [==============================] - 1s 45ms/step - loss: 0.0719 - accuracy: 0.9797 - val_loss: 0.3473 - val_accuracy: 0.8804\n",
+            "30/30 [==============================] - 1s 35ms/step - loss: 0.0678 - accuracy: 0.9807 - val_loss: 0.3549 - val_accuracy: 0.8770\n",
             "Epoch 10/20\n",
-            "30/30 [==============================] - 1s 44ms/step - loss: 0.0591 - accuracy: 0.9848 - val_loss: 0.3696 - val_accuracy: 0.8770\n",
+            "30/30 [==============================] - 1s 36ms/step - loss: 0.0544 - accuracy: 0.9867 - val_loss: 0.3768 - val_accuracy: 0.8769\n",
             "Epoch 11/20\n",
-            "30/30 [==============================] - 1s 44ms/step - loss: 0.0507 - accuracy: 0.9874 - val_loss: 0.4414 - val_accuracy: 0.8687\n",
+            "30/30 [==============================] - 1s 35ms/step - loss: 0.0465 - accuracy: 0.9886 - val_loss: 0.5335 - val_accuracy: 0.8496\n",
             "Epoch 12/20\n",
-            "30/30 [==============================] - 1s 44ms/step - loss: 0.0404 - accuracy: 0.9916 - val_loss: 0.4283 - val_accuracy: 0.8741\n",
+            "30/30 [==============================] - 1s 35ms/step - loss: 0.0383 - accuracy: 0.9907 - val_loss: 0.4257 - val_accuracy: 0.8747\n",
             "Epoch 13/20\n",
-            "30/30 [==============================] - 1s 44ms/step - loss: 0.0330 - accuracy: 0.9933 - val_loss: 0.4768 - val_accuracy: 0.8709\n",
+            "30/30 [==============================] - 1s 35ms/step - loss: 0.0333 - accuracy: 0.9923 - val_loss: 0.4573 - val_accuracy: 0.8700\n",
             "Epoch 14/20\n",
-            "30/30 [==============================] - 1s 44ms/step - loss: 0.0281 - accuracy: 0.9943 - val_loss: 0.4835 - val_accuracy: 0.8725\n",
+            "30/30 [==============================] - 1s 35ms/step - loss: 0.0250 - accuracy: 0.9949 - val_loss: 0.4797 - val_accuracy: 0.8708\n",
             "Epoch 15/20\n",
-            "30/30 [==============================] - 1s 44ms/step - loss: 0.0222 - accuracy: 0.9966 - val_loss: 0.5369 - val_accuracy: 0.8696\n",
+            "30/30 [==============================] - 1s 35ms/step - loss: 0.0219 - accuracy: 0.9963 - val_loss: 0.5114 - val_accuracy: 0.8718\n",
             "Epoch 16/20\n",
-            "30/30 [==============================] - 1s 43ms/step - loss: 0.0172 - accuracy: 0.9979 - val_loss: 0.5561 - val_accuracy: 0.8694\n",
+            "30/30 [==============================] - 1s 35ms/step - loss: 0.0137 - accuracy: 0.9987 - val_loss: 0.5591 - val_accuracy: 0.8646\n",
             "Epoch 17/20\n",
-            "30/30 [==============================] - 1s 44ms/step - loss: 0.0155 - accuracy: 0.9973 - val_loss: 0.5879 - val_accuracy: 0.8672\n",
+            "30/30 [==============================] - 1s 35ms/step - loss: 0.0140 - accuracy: 0.9983 - val_loss: 0.5824 - val_accuracy: 0.8653\n",
             "Epoch 18/20\n",
-            "30/30 [==============================] - 1s 44ms/step - loss: 0.0124 - accuracy: 0.9979 - val_loss: 0.6201 - val_accuracy: 0.8664\n",
+            "30/30 [==============================] - 1s 36ms/step - loss: 0.0141 - accuracy: 0.9972 - val_loss: 0.6026 - val_accuracy: 0.8659\n",
             "Epoch 19/20\n",
-            "30/30 [==============================] - 1s 44ms/step - loss: 0.0098 - accuracy: 0.9987 - val_loss: 0.6567 - val_accuracy: 0.8675\n",
+            "30/30 [==============================] - 1s 36ms/step - loss: 0.0063 - accuracy: 0.9998 - val_loss: 0.6360 - val_accuracy: 0.8654\n",
             "Epoch 20/20\n",
-            "30/30 [==============================] - 1s 44ms/step - loss: 0.0057 - accuracy: 0.9998 - val_loss: 0.6816 - val_accuracy: 0.8662\n"
+            "30/30 [==============================] - 1s 35ms/step - loss: 0.0114 - accuracy: 0.9970 - val_loss: 0.6656 - val_accuracy: 0.8633\n"
           ]
         }
       ]
@@ -254,11 +271,12 @@
         "from keras import layers\n",
         "\n",
         "model = models.Sequential()\n",
-        "model.add(layers.Dense(16, activation='relu', input_shape=(10000,)))\n",
+        "model.add(layers.Dense(32, activation='relu', input_shape=(10000,)))\n",
+        "model.add(layers.Dense(32, activation='relu'))\n",
         "model.add(layers.Dense(16, activation='relu'))\n",
         "model.add(layers.Dense(1, activation='sigmoid'))\n"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -268,10 +286,10 @@
       },
       "source": [
         "model.compile(optimizer='rmsprop',\n",
-        "              loss='binary_crossentropy',\n",
+        "              loss='mse',\n",
         "              metrics = ['accuracy'])"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -280,37 +298,81 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "XD8PyEFrCE86",
-        "outputId": "9c3fd473-9199-432e-86e4-e82d32a1f048"
+        "id": "6mQwTFSk6J3w",
+        "outputId": "3857f286-1aed-4db0-e95d-17ceeef9e412"
       },
       "source": [
-        "model.fit(x_train, y_train, epochs=4, batch_size=512)\n"
+        "model.fit(x_train, y_train, epochs=6, batch_size=512)"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/4\n",
-            "49/49 [==============================] - 2s 36ms/step - loss: 0.4386 - accuracy: 0.8192\n",
-            "Epoch 2/4\n",
-            "49/49 [==============================] - 2s 36ms/step - loss: 0.2525 - accuracy: 0.9098\n",
-            "Epoch 3/4\n",
-            "49/49 [==============================] - 2s 35ms/step - loss: 0.1944 - accuracy: 0.9299\n",
-            "Epoch 4/4\n",
-            "49/49 [==============================] - 2s 35ms/step - loss: 0.1654 - accuracy: 0.9412\n"
+            "Epoch 1/6\n",
+            "49/49 [==============================] - 2s 31ms/step - loss: 0.0092 - accuracy: 0.9888\n",
+            "Epoch 2/6\n",
+            "49/49 [==============================] - 2s 31ms/step - loss: 0.0042 - accuracy: 0.9950\n",
+            "Epoch 3/6\n",
+            "49/49 [==============================] - 2s 31ms/step - loss: 0.0038 - accuracy: 0.9956\n",
+            "Epoch 4/6\n",
+            "49/49 [==============================] - 2s 31ms/step - loss: 4.9863e-04 - accuracy: 0.9996\n",
+            "Epoch 5/6\n",
+            "49/49 [==============================] - 2s 31ms/step - loss: 0.0040 - accuracy: 0.9953\n",
+            "Epoch 6/6\n",
+            "49/49 [==============================] - 2s 31ms/step - loss: 1.7411e-04 - accuracy: 0.9998\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f6688904850>"
+              "<keras.callbacks.History at 0x7f5ac83cfbd0>"
             ]
           },
           "metadata": {},
-          "execution_count": 82
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XD8PyEFrCE86",
+        "outputId": "9e280827-32f3-4387-a822-c3a9f3524e56"
+      },
+      "source": [
+        "model.fit(x_train, y_train, epochs=4, batch_size=512)\n"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/4\n",
+            "49/49 [==============================] - 2s 28ms/step - loss: 0.4675 - accuracy: 0.8277\n",
+            "Epoch 2/4\n",
+            "49/49 [==============================] - 1s 27ms/step - loss: 0.2937 - accuracy: 0.9041\n",
+            "Epoch 3/4\n",
+            "49/49 [==============================] - 1s 28ms/step - loss: 0.2298 - accuracy: 0.9213\n",
+            "Epoch 4/4\n",
+            "49/49 [==============================] - 1s 27ms/step - loss: 0.1950 - accuracy: 0.9331\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f5ac837ae90>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
         }
       ]
     },
@@ -321,18 +383,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xJqMUcpDCc2U",
-        "outputId": "fb986686-183e-4649-d2b3-84130de46de5"
+        "outputId": "22a41b70-13ae-4c0e-c820-946fa6b7a10d"
       },
       "source": [
         "results =model.evaluate(x_test,y_test)\n"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "782/782 [==============================] - 2s 2ms/step - loss: 0.3010 - accuracy: 0.8818\n"
+            "782/782 [==============================] - 2s 2ms/step - loss: 0.1224 - accuracy: 0.8573\n"
           ]
         }
       ]
@@ -344,28 +406,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9FJOiNHCCxFv",
-        "outputId": "cc67fd9f-5272-4c7d-85ee-f7db90056878"
+        "outputId": "7274ddec-dc78-479d-b0f2-b200c475b3ef"
       },
       "source": [
         "model.predict(x_test)\n"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.17266959],\n",
-              "       [0.99982965],\n",
-              "       [0.78237396],\n",
+              "array([[0.06088194],\n",
+              "       [1.        ],\n",
+              "       [0.99999875],\n",
               "       ...,\n",
-              "       [0.0881424 ],\n",
-              "       [0.06143901],\n",
-              "       [0.56031716]], dtype=float32)"
+              "       [0.05674678],\n",
+              "       [0.01607183],\n",
+              "       [0.23705414]], dtype=float32)"
             ]
           },
           "metadata": {},
-          "execution_count": 84
+          "execution_count": 31
         }
       ]
     }
